fix: Multidropdown z-index

--- a/src/components/MultiDropdown/MultiDropdown.module.scss
+++ b/src/components/MultiDropdown/MultiDropdown.module.scss
@@ -8,7 +8,7 @@
 
 .dropdown {
   position: absolute;
-  z-index: 100;
+  z-index: 10;
   top: 55px;
   margin: 0;
   padding: 0;
